# sintellix

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
docs/: api_reference.md  architecture.md  getting_started.md  paper_outline.md  training_guide.md
include/sintellix/codec/: cic_data.hpp  decoder.hpp  encoder.hpp  vqgan.hpp
include/sintellix/core/: config.hpp  multi_gpu.cuh  neuron.cuh  neuron_model.cuh
include/sintellix/storage/: tiered_storage.cuh
proto/: model_state.proto  neuron_config.proto
python/: CMakeLists.txt  README.md  bindings.cpp  setup.py
python/sintellix/: __init__.py  core.py  models.py  training.py  utils.py
src/codec/: cic_data.cpp  decoder.cu  encoder.cu  vqgan.cu
src/core/: config.cpp  multi_gpu.cu  neuron.cu  neuron_model.cu
src/storage/: tiered_storage.cu
